feat: add comprehensive OCSF security data pipeline blog post
- Add detailed guide for Wazuh to OCSF transformation using Tenzir
- Include production-ready pipeline configurations and code examples
- Provide complete architecture diagrams with Mermaid
- Add event class mappings for authentication, network, and file activities
- Include HA deployment setup with Docker Compose
- Add monitoring, troubleshooting, and optimization strategies
- Provide integration examples for Security Lake, Splunk, and OpenSearch
- Include security considerations and cost optimization techniques

Co-Authored-By: Claude <noreply@anthropic.com>
🤖 Generated with Claude Code